build/log/idf_py_stdout_output_5168
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\SHT3x_Powersave\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/SHT3x_Powersave/build/bootloader/bootloader.bin"
Bootloader binary size 0x6a10 bytes. 0x5f0 bytes (5%) free.
[2/8] Building C object esp-idf/bee_ota/CMakeFiles/__idf_bee_ota.dir/bee_ota.c.obj
FAILED: esp-idf/bee_ota/CMakeFiles/__idf_bee_ota.dir/bee_ota.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/SHT3x_Powersave/build/config -IE:/SHT3x_Powersave/components/bee_ota -IC:/Espressif/frameworks/esp-idf-v5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include/arch -IE:/SHT3x_Powersave/components/bee_nvs -IC:/Espressif/frameworks/esp-idf-v5.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_partition/include -IE:/SHT3x_Powersave/components/bee_wifi -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/app_update/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/bootloader_support/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/bootloader_support/bootloader_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_app_format/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_http_client/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_https_ota/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/SHT3x_Powersave=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bee_ota/CMakeFiles/__idf_bee_ota.dir/bee_ota.c.obj -MF esp-idf\bee_ota\CMakeFiles\__idf_bee_ota.dir\bee_ota.c.obj.d -o esp-idf/bee_ota/CMakeFiles/__idf_bee_ota.dir/bee_ota.c.obj -c E:/SHT3x_Powersave/components/bee_ota/bee_ota.c
E:/SHT3x_Powersave/components/bee_ota/bee_ota.c: In function 'start_ota_task':
E:/SHT3x_Powersave/components/bee_ota/bee_ota.c:64:51: error: too few arguments to function 'esp_http_client_get_post_field'
   64 |         const char *response_data = (const char *)esp_http_client_get_post_field(client);
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from E:/SHT3x_Powersave/components/bee_ota/bee_ota.c:7:
C:/Espressif/frameworks/esp-idf-v5.1/components/esp_http_client/include/esp_http_client.h:285:5: note: declared here
  285 | int esp_http_client_get_post_field(esp_http_client_handle_t client, char **data);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
